--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -17,11 +17,16 @@
   name = "Research"
   url = "#research"
   weight = 30
-
+  
+[[main]]
+  name = "Teaching"
+  url = "#teaching"
+  weight = 40
+  
 [[main]]
   name = "Contact"
   url = "#contact"
-  weight = 40
+  weight = 50
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
